# todo.txt-pre-commit-hooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
todotxt_tools/: _version.py  add_task_begin_dates.py  add_task_completion_dates.py  add_task_creation_dates.py  add_task_uuids.py  format_file.py
