[metadata]
name = todotxt_pre_commit_hooks
version = 0.0.0
description = pre-commit hooks for todo.txt format files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chaotika/todo.txt-pre-commit-hooks
author = Markus Katharina Brechtel
author_email = mkb+todo.txt-pre-commit-hooks@thengo.net
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    pytodotxt

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-added-large-files = pre_commit_hooks.check_added_large_files:main

[bdist_wheel]
universal = True
