[metadata]
name = todotxt_tools
version = 0.0.0
description = pre-commit hooks for todo.txt format files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chaotika/todo.txt-tools
author = Markus Katharina Brechtel
author_email = mkb+todo.txt-tools@thengo.net
license = MIT
license_file = LICENSE

[options]
packages = todotxt_tools
install_requires =
    pytodotxt @ git+https://github.com/chaotika/pytodotxt.git@74d3f1bf2dcf32283b5c5a9cdb0474d968fffbbb

[options.entry_points]
console_scripts =
    todotxt-add-task-begin-dates = todotxt_tools.add_task_begin_dates:main

[bdist_wheel]
universal = True
