[metadata]
name = todotxt_tools
version = 0.0.1
description = pre-commit hooks for todo.txt format files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chaotika/todo.txt-tools
author = Markus Katharina Brechtel
author_email = mkb+todo.txt-tools@thengo.net
license = MIT
license_file = LICENSE

[options]
packages = todotxt_tools
install_requires =
    pytodotxt >= 1.2.0

[options.entry_points]
console_scripts =
    todotxt-add-task-creation-dates = todotxt_tools.add_task_creation_dates:main
    todotxt-add-task-completion-dates = todotxt_tools.add_task_completion_dates:main
    todotxt-add-task-uuids = todotxt_tools.add_task_uuids:main
    todotxt-format-file = todotxt_tools.format_file:main
[bdist_wheel]
universal = True
